--- a/weekly_journal.html
+++ b/weekly_journal.html
@@ -57,22 +57,22 @@
     <div class="toc">
         <h2>Table of Contents</h2>
         <ul>
-            <li><a href="#week1">Week 1 — Setting Up GitHub & Python</a></li>
-            <li><a href="#week2">Week 2 — Working With Weather & Air Quality APIs</a></li>
-            <li><a href="#week3">Week 3 — Intro to Flask & Jinja Templates</a></li>
-            <li><a href="#week4">Week 4 — Building Project 1: AirQuest</a></li>
-            <li><a href="#week5">Week 5 — Flask II & Personal Website Updates</a></li>
-            <li><a href="#week6">Week 6 — Sessions, POST Requests & Split Decision</a></li>
-            <li><a href="#week7">Week 7 — Remote Learning: File I/O & Donut Review App</a></li>
-            <li><a href="#week8">Week 8 — Flask + MongoDB</a></li>
-            <li><a href="#week9">Week 9 — Real-Time Apps with Flask-SocketIO</a></li>
-            <li><a href="#week10">Week 10 — Exercise 5: Data Visualizations</a></li>
+            <li><a href="#week1">Week 1</a></li>
+            <li><a href="#week2">Week 2</a></li>
+            <li><a href="#week3">Week 3</a></li>
+            <li><a href="#week4">Week 4</a></li>
+            <li><a href="#week5">Week 5</a></li>
+            <li><a href="#week6">Week 6</a></li>
+            <li><a href="#week7">Week 7</a></li>
+            <li><a href="#week8">Week 8</a></li>
+            <li><a href="#week9">Week 9</a></li>
+            <li><a href="#week10">Week 10</a></li>
         </ul>
     </div>
 
     <!-- WEEK 1 -->
     <section id="week1">
-        <h2>Week 1 — Setting Up GitHub & Python</h2>
+        <h2>Week 1</h2>
         <p>This week I set up my GitHub repository, installed Python, and created both the main page and this journal
             page. It feels nice to have a dedicated space to document my learning journey in CART 351.</p>
 
@@ -94,7 +94,7 @@
 
     <!-- WEEK 2 -->
     <section id="week2">
-        <h2>Week 2 — Working With Weather & Air Quality APIs</h2>
+        <h2>Week 2</h2>
         <p>This week we worked with APIs, specifically the Weather API and the World Air Quality Index API.</p>
 
         <h3>Reflections</h3>
@@ -113,7 +113,7 @@
 
     <!-- WEEK 3 -->
     <section id="week3">
-        <h2>Week 3 — Intro to Flask & Jinja Templates</h2>
+        <h2>Week 3</h2>
         <p>This week, we started learning about Flask and built a simple web app. Flask felt surprisingly
             straightforward and enjoyable to follow.</p>
 
@@ -126,7 +126,7 @@
         <h3>Goals for This Week</h3>
         <ul>
             <li>Experiment more with Flask templates</li>
-            <li>Work on Project 1 with Cathy</li>
+            <li></li>
         </ul>
     </section>
 
