--- a/weekly_journal.html
+++ b/weekly_journal.html
@@ -73,155 +73,117 @@
     <!-- WEEK 1 -->
     <section id="week1">
         <h2>Week 1</h2>
-        <p>This week I set up my GitHub repository, installed Python, and created both the main page and this journal
-            page. It feels nice to have a dedicated space to document my learning journey in CART 351.</p>
+        <p>This week I tried to set up my GitHub repository. Setting up GitHub Pages was familiar since I had done it
+            many times before. The main issue came from me
+            forgetting the steps to do it. I have a love-hate relationship with Github. Once everything was installed,
+            working on HTML, CSS, and JavaScript felt familiar.</p>
 
-        <h3>Reflections</h3>
-        <p>Setting up GitHub Pages was familiar since I had done it before. The main issue came from using a new
-            laptop—none of my old installations were there anymore. I had to reinstall Node.js, VS Code extensions,
-            Python packages, and set up my SSH key to clone the repository.</p>
-        <p>Once everything was installed again, working on HTML, CSS, and JavaScript felt smooth.</p>
-
-        <blockquote>"The best way to learn is to reflect on what you're doing while you're doing it." — My thought while
-            setting this up</blockquote>
-
-        <h3>Goals for This Week</h3>
+        <h3>To do</h3>
         <ul>
-            <li>Complete the GitHub setup and submit my repo URL</li>
-            <li>Get comfortable with updating this journal weekly</li>
+            <li>Submit my repo URL through moodle</li>
         </ul>
     </section>
 
     <!-- WEEK 2 -->
     <section id="week2">
         <h2>Week 2</h2>
-        <p>This week we worked with APIs, specifically the Weather API and the World Air Quality Index API.</p>
-
-        <h3>Reflections</h3>
-        <p>The initial concept was straightforward—APIs let you pull data from external sources. But the in-class
-            exercise quickly became confusing because the instructions were very compact. I accidentally skipped steps
-            and had to backtrack.</p>
-        <p>Working with my teammate helped a lot. We caught each other's mistakes and eventually completed the exercise
-            together.</p>
-        <p>I’m interested in using real-time data creatively instead of just showing numbers on a screen.</p>
-
-        <h3>Goals for This Week</h3>
+        <p>This week we learned how to use different APIs, including one for weather and one for air quality. Got a
+            little bit confused but it seems that half the class were also a bit behind as well. Ended up understadning
+            and completing it in the end so I'm happy.</p>
+        <h3>To Do</h3>
         <ul>
-            <li>Work on Project 1</li>
+            <li>Work on Project I</li>
         </ul>
     </section>
 
     <!-- WEEK 3 -->
     <section id="week3">
         <h2>Week 3</h2>
-        <p>This week, we started learning about Flask and built a simple web app. Flask felt surprisingly
-            straightforward and enjoyable to follow.</p>
-
-        <h3>Reflections</h3>
-        <p>The steps were clear—setting up the environment, creating routes, and rendering templates. I enjoyed seeing
-            Python connect directly to HTML through Jinja.</p>
-        <p>I also read “The Space Between Us,” which explored a poetic use of location tracking. It inspired me to think
-            about how tools like Flask can create meaningful, emotionally driven interactions.</p>
-
-        <h3>Goals for This Week</h3>
+        <p>This week, we worked on learning about Flask as well as building a web page. What is Flask? It is a Python
+            framework built to make websites dynamic. It was easy to follow. Surprisingly, creating routes, and the
+            templates felt satisfying and fun. And to see it all come together make it worth while.</p>
+        <h3>To Do</h3>
         <ul>
-            <li>Experiment more with Flask templates</li>
-            <li></li>
+            <li>work on the project I</li>
         </ul>
     </section>
 
     <!-- WEEK 4 -->
     <section id="week4">
-        <h2>Week 4 — Building Project 1: AirQuest</h2>
-        <p>This week I focused on completing Project 1 with Cathy. We created <strong>AirQuest</strong>, a
-            terminal-based game that uses real-time air quality data.</p>
+        <h2>Week 4</h2>
+        <p>This week, John and I built our first project for this class. Using air quality gtom the World Air Quality
+            Index API. It was a simple but working website. I liked how much information can be displayed in the
+            ternimal.</p>
+        <h3>To Do</h3>
 
-        <h3>Reflections</h3>
-        <p>Working in the terminal forced us to be creative with visuals—colors, ASCII art, and poetic warnings like
-            “You inhale capitalism.” It made environmental data feel more emotional than just statistics.</p>
-        <p>I also read “Dear Loneliness,” which discussed emotional data collection. It made me reflect on how our game
-            uses environmental data as an abstraction rather than lived experience.</p>
     </section>
 
     <!-- WEEK 5 -->
     <section id="week5">
-        <h2>Week 5 — Flask II & Personal Website Updates</h2>
-        <p>This week we continued working with Flask, focusing on how templates and routes communicate.</p>
-
-        <h3>Reflections</h3>
-        <p>I’m getting more comfortable with Flask’s structure. Comparing code with Cathy helped me catch typos and
-            understand the logic more clearly.</p>
-        <p>I also updated my personal website, leaning into a retro, pixel-inspired aesthetic.</p>
-
-        <h3>Goals for This Week</h3>
+        <h2>Week 5 </h2>
+        <p>Today in class, we continued working with Flask. At the end of the class we had our 2nd exercise and I worked
+            on it with John.</p>
+        <h3>To Do</h3>
         <ul>
-            <li>Start planning Project 2</li>
+            <li>Look into Project II</li>
         </ul>
     </section>
 
     <!-- WEEK 6 -->
     <section id="week6">
-        <h2>Week 6 — Sessions, POST Requests & Split Decision</h2>
-        <p>This week we learned how to use Flask sessions, POST requests, and JavaScript Fetch to handle asynchronous
-            communication.</p>
-
-        <h3>Reflections</h3>
-        <p>I finally understood client–server communication more clearly. Working with sessions showed me new ways to
-            store temporary data.</p>
-        <p>Cathy and I began designing our new project: <strong>Split Decision</strong>, an interactive group
-            decision-making app.</p>
-
-        <h3>Goals for Next Week</h3>
+        <h2>Week 6</h2>
+        <p>This week we are still doing Flask, this time going into the depths of hell. Just kidding. We dove deeper
+            into the advanced features (POST requests). Also learned about uploading images to the server.</p>
+        <h3>To Do</h3>
         <ul>
-            <li>Start building the structure of our Flask app</li>
+            <li>Start working on Project II</li>
         </ul>
     </section>
 
     <!-- WEEK 7 -->
     <section id="week7">
-        <h2>Week 7 — Remote Learning: File I/O & Donut Review App</h2>
-        <p>Because of the STM strike, I completed the Flask IV tutorial remotely. I learned how to read and write text
-            and JSON files in Python and practiced sending data with Fetch.</p>
-
-        <h3>Reflections</h3>
-        <p>The donut review page was fun to build—users pick a donut, write a comment, and see it instantly added to the
-            “Community Donut Wall.”</p>
-        <p>Debugging on my own was harder, but I learned a lot from problem-solving without immediate help.</p>
+        <h2>Week 7</h2>
+        <p>This week we learned more about FLASK. I was a bit behind during the lectures but got throught it using the
+            moodle websites. At the end we had an exercise and I made a website about making your custom donuts and
+            putting your name to then submit.</p>
+        <h3>To Do</h3>
+        <ul>
+            <li></li>
+        </ul>
     </section>
 
     <!-- WEEK 8 -->
     <section id="week8">
-        <h2>Week 8 — Flask + MongoDB</h2>
-        <p>This week we connected Flask to MongoDB using a cloud database and environment variables.</p>
+        <h2>Week 8</h2>
+        <p>Today, we were introduced to MongoDB and learned how to connect Flask with MongoDB. It was probably the most
+            confusing class because i was a bit lost at first. A few clarification from the teacher and I was succesful
+            again. We made an account, made a cluster, collection, and then connect it to out Flask app. It was fun to
+            see the data pop up in MongoDB.</p>
+        <h3>To Do</h3>
+        <ul>
+            <li></li>
+        </ul>
 
-        <h3>Reflections</h3>
-        <p>Since I already had some foundational experience with databases, things felt smoother. I’m considering
-            switching Split Decision from JSON files to MongoDB in the future.</p>
-    </section>
+        <!-- WEEK 9 -->
+        <section id="week9">
+            <p>I was sick today so I wasn't able to come to class. I took the time to start brainstorming for the final
+                project. I didn't have the chance to do exercise 4 and try out other classmates projects. </p>
+            <h3>To Do</h3>
+            <ul>
+                <li>Look into Project III</li>
+            </ul>
+        </section>
 
-    <!-- WEEK 9 -->
-    <section id="week9">
-        <h2>Week 9 — Real-Time Apps with Flask-SocketIO</h2>
-        <p>This week we learned how to create real-time interactions using WebSockets and SocketIO.</p>
-
-        <h3>Reflections</h3>
-        <p>I found this extremely engaging—real-time shared interactions made the app feel dynamic and multiplayer-like.
-        </p>
-        <p>Outside class, I fixed some broken GitHub Pages links due to case-sensitivity.</p>
-    </section>
-
-    <!-- WEEK 10 -->
-    <section id="week10">
-        <h2>Week 10 — Exercise 5: Data Visualizations</h2>
-        <p>This week I focused entirely on Exercise 5, which was the most challenging task so far.</p>
-
-        <h3>Reflections</h3>
-        <p>Designing unique visualizations for each query pushed me to combine technical logic with creative layout and
-            animation. I ran into issues like data overlap, spacing problems, and animation drift. Collaborating with
-            Cathy helped a lot with debugging and idea-sharing.</p>
-        <p>Despite being long and complex, the final results were rewarding and made me more confident in dynamic,
-            data-driven design.</p>
-    </section>
+        <!-- WEEK 10 -->
+        <section id="week10">
+            <h2>Week 10</h2>
+            <p>This week I focused entirely on Exercise 5, which was the most difficult task so far. Making unique
+                visualizations for each query was a bit frustrating. At the end I used ChatGPT to help with the
+                debugging</p>
+            <ul>
+                <li>Start Project III</li>
+            </ul>
+        </section>
 
 </body>
 
