--- a/weekly_journals.html
+++ b/weekly_journals.html
@@ -1,52 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="style.css">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CART 351 Weekly Journal</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 40px 20px;
-            line-height: 1.6;
-        }
 
-        h1,
-        h2 {
-            font-weight: 600;
-        }
-
-        h1 {
-            text-align: center;
-            margin-bottom: 40px;
-        }
-
-        .toc {
-            margin-bottom: 40px;
-            padding: 20px;
-            background: #f4f4f4;
-            border-radius: 8px;
-        }
-
-        .toc ul {
-            list-style: none;
-            padding-left: 0;
-        }
-
-        .toc li {
-            margin: 6px 0;
-        }
-
-        blockquote {
-            border-left: 4px solid #ccc;
-            padding-left: 12px;
-            color: #555;
-            font-style: italic;
-        }
-    </style>
 </head>
 
 <body>
@@ -157,25 +117,25 @@
         <ul>
             <li></li>
         </ul>
+    </section>
+    <section id="week9">
+        <p>I was sick today so I wasn't able to come to class. I took the time to start brainstorming for the final
+            project. I didn't have the chance to do exercise 4 and try out other classmates projects. </p>
+        <h3>To Do</h3>
+        <ul>
+            <li>Look into Project III</li>
+        </ul>
+    </section>
 
-        <section id="week9">
-            <p>I was sick today so I wasn't able to come to class. I took the time to start brainstorming for the final
-                project. I didn't have the chance to do exercise 4 and try out other classmates projects. </p>
-            <h3>To Do</h3>
-            <ul>
-                <li>Look into Project III</li>
-            </ul>
-        </section>
-
-        <section id="week10">
-            <h2>Week 10</h2>
-            <p>This week I focused entirely on Exercise 5, which was the most difficult task so far. Making unique
-                visualizations for each query was a bit frustrating. At the end I used ChatGPT to help with the
-                debugging</p>
-            <ul>
-                <li>Start Project III</li>
-            </ul>
-        </section>
+    <section id="week10">
+        <h2>Week 10</h2>
+        <p>This week I focused entirely on Exercise 5, which was the most difficult task so far. Making unique
+            visualizations for each query was a bit frustrating. At the end I used ChatGPT to help with the
+            debugging</p>
+        <ul>
+            <li>Start Project III</li>
+        </ul>
+    </section>
 
 </body>
 
