--- a/weekly_journal/index.html
+++ b/weekly_journal/index.html
@@ -34,11 +34,11 @@
         <section>
             <h2>Exercises</h2>
             <ul>
-                <li><a href="[exercise1_live_link]">Exercise 1 </a></li>
-                <li><a href="[exercise2_live_link]">Exercise 2 </a></li>
-                <li><a href="[exercise3_live_link]">Exercise 3 </a></li>
-                <li><a href="[exercise4_live_link]">Exercise 4 </a></li>
-                <li><a href="[exercise5_live_link]">Exercise 5 </a></li>
+                <li><a href="https://github.com/WilliamNguy/cart351/blob/main/john_william_exercise.py">Exercise 1 </a>
+                </li>
+                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/ex_2">Exercise 2 </a></li>
+                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/ex_3">Exercise 3 </a></li>
+                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/william_ex5">Exercise 5 </a></li>
             </ul>
         </section>
 
@@ -46,8 +46,10 @@
             <h2>Project I</h2>
             <ul>
                 <li><a href="[project1_download_link]">Download</a></li>
-                <li><a href="[project1_live_link]">Live</a></li>
-                <li><a href="[project1_doc_link]">Documentation</a></li>
+                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/Project1">Live</a></li>
+                <li><a
+                        href="https://github.com/WilliamNguy/cart351/blob/main/Project1/CART%20253_%20Project%201%20-%20John%20%26%20William.pdf">Documentation</a>
+                </li>
             </ul>
         </section>
 
@@ -55,7 +57,7 @@
             <h2>Project II</h2>
             <ul>
                 <li><a href="[project2_download_link]">Download</a></li>
-                <li><a href="[project2_live_link]">Live</a></li>
+                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/William_Project2">Live</a></li>
                 <li><a href="[project2_doc_link]">Documentation</a></li>
             </ul>
         </section>
@@ -64,7 +66,7 @@
             <h2>Project III</h2>
             <ul>
                 <li><a href="[project3_download_link]">Download</a></li>
-                <li><a href="[project3_live_link]">Live</a></li>
+                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/nostalgia_final">Live</a></li>
                 <li><a href="[project3_doc_link]">Documentation</a></li>
             </ul>
         </section>
