--- a/weekly_journal/index.html
+++ b/weekly_journal/index.html
@@ -45,8 +45,7 @@
         <section>
             <h2>Project I</h2>
             <ul>
-                <li><a href="[project1_download_link]">Download</a></li>
-                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/Project1">Live</a></li>
+                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/Project1"></a></li>
                 <li><a
                         href="https://github.com/WilliamNguy/cart351/blob/main/Project1/CART%20253_%20Project%201%20-%20John%20%26%20William.pdf">Documentation</a>
                 </li>
@@ -56,27 +55,22 @@
         <section>
             <h2>Project II</h2>
             <ul>
-                <li><a href="[project2_download_link]">Download</a></li>
-                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/William_Project2">Live</a></li>
-                <li><a href="[project2_doc_link]">Documentation</a></li>
+                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/William_Project2"></a></li>
+                <li><a href="https://github.com/WilliamNguy/cart351/blob/main/Project%20II.pdf">Documentation</a></li>
             </ul>
         </section>
 
         <section>
             <h2>Project III</h2>
             <ul>
-                <li><a href="[project3_download_link]">Download</a></li>
-                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/nostalgia_final">Live</a></li>
-                <li><a href="[project3_doc_link]">Documentation</a></li>
+                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/nostalgia_final"></a></li>
+                <li><a
+                        href="https://github.com/WilliamNguy/cart351/blob/main/nostalgia_final/Nostalgia%20Portal%20.pdf">Documentation</a>
+                </li>
             </ul>
         </section>
     </main>
 
-    <footer>
-        <p>
-            This site documents my work for CART 351. More links and updates will be added weekly.
-        </p>
-    </footer>
 
 </body>
 
