--- a/weekly_journal/index.html
+++ b/weekly_journal/index.html
@@ -45,7 +45,7 @@
         <section>
             <h2>Project I</h2>
             <ul>
-                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/Project1"></a></li>
+                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/Project1">repo</a></li>
                 <li><a
                         href="https://github.com/WilliamNguy/cart351/blob/main/Project1/CART%20253_%20Project%201%20-%20John%20%26%20William.pdf">Documentation</a>
                 </li>
@@ -55,7 +55,7 @@
         <section>
             <h2>Project II</h2>
             <ul>
-                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/William_Project2"></a></li>
+                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/William_Project2">repo</a></li>
                 <li><a href="https://github.com/WilliamNguy/cart351/blob/main/Project%20II.pdf">Documentation</a></li>
             </ul>
         </section>
@@ -63,7 +63,7 @@
         <section>
             <h2>Project III</h2>
             <ul>
-                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/nostalgia_final"></a></li>
+                <li><a href="https://github.com/WilliamNguy/cart351/tree/main/nostalgia_final">repo</a></li>
                 <li><a
                         href="https://github.com/WilliamNguy/cart351/blob/main/nostalgia_final/Nostalgia%20Portal%20.pdf">Documentation</a>
                 </li>
